--- a/LMS-Lexicon/Views/Student/Index.cshtml
+++ b/LMS-Lexicon/Views/Student/Index.cshtml
@@ -1,8 +1,102 @@
 ﻿@model IndexViewModel
+@inject ICourseSelectService courseSelect
+
+@{
+    ViewData["Title"] = "StudentCourseDetails";
+}
 @{
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">@Model.FirstName : @Model.Role</h1>
+<div class="text-left">
+    <h4>@Model.FirstName @Model.LastName</h4>
 </div>
+
+<div class="text-left">
+</div>
+<!--<table>
+    <thead>
+        <tr>-->
+@*<th>@Model.CourseName </th>*@
+<!--<td style="font-size: 20px ; font-weight: bold">Kursnamn</td>
+            <td>          @Model.CourseName</td>
+            <th></th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td style="font-size: 20px ; font-weight: bold">Description</td>
+            <td>          @Model.CourseDescription </td>
+        </tr>
+        <tr>
+            <td style="font-size: 20px ; font-weight: bold">Course Start Date</td>
+            <td>          @Model.CourseStartDate </td>
+        </tr>
+        <tr>
+            <td>
+                <button type="button" class="btn btn-primary">KursModuler</button>
+            </td>
+        </tr>
+        <tr> </tr>
+        <tr> </tr>
+
+    </tbody>
+</table>-->
+@*<div> . </div>
+    <div>  .</div>
+    <div>  .</div>
+    <div>  .</div>
+
+    <div>
+        <a asp-controller="Student" asp-action="Details" asp-route-id="@Model.CourseId">Show Course Details</a>
+    </div>*@
+
+<div>
+    <h4>Min Sida</h4>
+    <hr />
+    <dl class="row">
+        <dt class="col-sm-2">
+            Email
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Email)
+        </dd>
+        <dt class="col-sm-2">
+            Registrationstid
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.TimeOfRegistration)
+        </dd>
+        <dt class="col-sm-2">
+            Kursnamn
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.CourseName)
+        </dd>
+        <dt class="col-sm-2">
+            Kursbeskrivning
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.CourseDescription)
+        </dd>
+        <dt class="col-sm-2">
+            Kursstartdatum
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.CourseStartDate)
+        </dd>
+        <dt class="col-sm-2">
+            <button type="button" class="btn btn-primary" action=Views_Student_StudentCourseDetails>KursModuler</button>
+            @*<button type="button" class="collapse @(ViewBag.ShowModule ? "show" :"")">KursModuler</button>*@
+
+        </dt>
+    </dl>
+</div>
+
+
+
+
+<div>
+    <a asp-controller="Student" asp-action="Details" asp-route-id="@Model.CourseId">Show Course Details</a>
+</div>
+
